--- a/styles/login.css
+++ b/styles/login.css
@@ -51,6 +51,11 @@ form input {
   margin-left: 1rem;
 }
 
+.error {
+  font-size: 1.5rem;
+  color: red;
+}
+
 /* checkbox */
 .remember {
   display: block;
