--- a/styles/global.css
+++ b/styles/global.css
@@ -17,6 +17,11 @@ a {
   text-decoration: none;
 }
 
+img {
+  display: block;
+  max-width: 100%;
+}
+
 .header {
   display: flex;
   justify-content: space-between;
